added total number of forks and corrected finding maximum commits function

--- a/JS3-Week1-HomeWork/index.html
+++ b/JS3-Week1-HomeWork/index.html
@@ -18,6 +18,7 @@
             <button class="tablinks btn_LeastForked">Least Forked</button>
             <button class="tablinks btn_MostStargazers">Most Stargazers</button>
             <button class="tablinks btn_LeastStargazers">Least Stargazers</button>
+            <button class="tablinks btn_TotalForks">Total of all the Forks</button>
         </div>
     </div>
       
