--- a/JS3-Week3-HomeWork/index.html
+++ b/JS3-Week3-HomeWork/index.html
@@ -6,13 +6,18 @@
     
 </head>
 <body>
-    <p>To view the step 1 (select movies by decade, sort movies by name/ year / rating) <br>
-        Please click: <br> https://github.com/AmritaMaloo/hyf-javascript3/tree/master/JS3-Week2-HomeWork<br>
-        https://amritamaloo.github.io/hyf-javascript3/JS3-Week2-HomeWork/ </p> 
-    
-    <button id="btn-0">Button 1!</button>
-    <button id="btn-1">Button 2!</button>
-    <button id="btn-2">Button 3!</button>
+    <div>
+        <p>To view the step 1 (select movies by decade, sort movies by name/ year / rating)<br>
+            Please click:<br><a href="https://github.com/AmritaMaloo/hyf-javascript3/tree/master/JS3-Week2-HomeWork" target="_blank">github repo link</a><br>
+            <a href="https://amritamaloo.github.io/hyf-javascript3/JS3-Week2-HomeWork/" target="_blank">published link</a></p> 
+    </div>
+    <div>
+        <p>Output of steps 2.1(Closure add6), 2.2(Promise) can be viewed in console. </p>
+        <p>Please click the buttons below to see the output for step 2.3</p>
+        <button id="btn-0">Button 1!</button>
+        <button id="btn-1">Button 2!</button>
+        <button id="btn-2">Button 3!</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
